--- a/FragmentShader.vcproj
+++ b/FragmentShader.vcproj
@@ -43,7 +43,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
+				AdditionalIncludeDirectories=".;src;xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;wxNO_EXCEPTIONS=1;wxUSE_UNICODE=0;"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -122,7 +122,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
+				AdditionalIncludeDirectories=".;src;xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
 				WarningLevel="3"
@@ -201,7 +201,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
+				AdditionalIncludeDirectories=".;src;xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;wxNO_EXCEPTIONS=1"
 				BasicRuntimeChecks="0"
 				RuntimeLibrary="3"
@@ -280,7 +280,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
+				AdditionalIncludeDirectories=".;src;xpm;lua\5.1.4\src;&quot;$(wxWidgets)\include&quot;;&quot;$(wxWidgets)\include\msvc&quot;;&quot;$(TargetDir)&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG"
 				RuntimeLibrary="2"
 				WarningLevel="3"
@@ -341,7 +341,7 @@
 	</References>
 	<Files>
 		<Filter
-			Name="XPM"
+			Name="xpm"
 			>
 			<File
 				RelativePath=".\xpm\agt_action_success.xpm"
@@ -388,246 +388,250 @@
 				>
 			</File>
 		</Filter>
-		<File
-			RelativePath=".\base64.cpp"
+		<Filter
+			Name="src"
 			>
-		</File>
-		<File
-			RelativePath=".\base64.h"
-			>
-		</File>
-		<File
-			RelativePath=".\canvas.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\canvas.h"
-			>
-		</File>
-		<File
-			RelativePath=".\clipboard.h"
-			>
-		</File>
-		<File
-			RelativePath=".\code.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\code.h"
-			>
-		</File>
-		<File
-			RelativePath=".\debug.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\debug.h"
-			>
-		</File>
-		<File
-			RelativePath=".\expr.c"
-			>
-		</File>
-		<File
-			RelativePath=".\graph.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\graph.h"
-			>
-		</File>
-		<File
-			RelativePath=".\group.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\group.h"
-			>
-		</File>
-		<File
-			RelativePath=".\luautil.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\luautil.h"
-			>
-		</File>
-		<File
-			RelativePath=".\main.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\main.h"
-			>
-		</File>
-		<File
-			RelativePath=".\member.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\member.h"
-			>
-		</File>
-		<File
-			RelativePath=".\menustate.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\menustate.h"
-			>
-		</File>
-		<File
-			RelativePath=".\method.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\method.h"
-			>
-		</File>
-		<File
-			RelativePath=".\node.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\node.h"
-			>
-		</File>
-		<File
-			RelativePath=".\nodelib.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\nodelib.h"
-			>
-		</File>
-		<File
-			RelativePath=".\panel.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\panel.h"
-			>
-		</File>
-		<File
-			RelativePath=".\persistent.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\persistent.h"
-			>
-		</File>
-		<File
-			RelativePath=".\project.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\project.h"
-			>
-		</File>
-		<File
-			RelativePath=".\property.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\property.h"
-			>
-		</File>
-		<File
-			RelativePath=".\propgrid.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\propgrid.h"
-			>
-		</File>
-		<File
-			RelativePath=".\recentmenu.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\recentmenu.h"
-			>
-		</File>
-		<File
-			RelativePath=".\report.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\report.h"
-			>
-		</File>
-		<File
-			RelativePath=".\rulerdc.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\rulerdc.h"
-			>
-		</File>
-		<File
-			RelativePath=".\shader.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\shader.h"
-			>
-		</File>
-		<File
-			RelativePath=".\shaderobj.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\shaderobj.h"
-			>
-		</File>
-		<File
-			RelativePath=".\shape.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\shape.h"
-			>
-		</File>
-		<File
-			RelativePath=".\stream.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\stream.h"
-			>
-		</File>
-		<File
-			RelativePath=".\typediag.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\typediag.h"
-			>
-		</File>
-		<File
-			RelativePath=".\undo.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\undo.h"
-			>
-		</File>
-		<File
-			RelativePath=".\util.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\util.h"
-			>
-		</File>
-		<File
-			RelativePath=".\xml.cpp"
-			>
-		</File>
-		<File
-			RelativePath=".\xml.h"
-			>
-		</File>
+			<File
+				RelativePath=".\src\base64.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\base64.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\canvas.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\canvas.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\clipboard.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\code.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\code.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\debug.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\debug.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\expr.c"
+				>
+			</File>
+			<File
+				RelativePath=".\src\graph.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\graph.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\group.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\group.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\luautil.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\luautil.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\main.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\member.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\member.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\menustate.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\menustate.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\method.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\method.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\node.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\node.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\nodelib.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\nodelib.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\panel.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\panel.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\persistent.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\persistent.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\project.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\project.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\property.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\property.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\propgrid.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\propgrid.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\recentmenu.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\recentmenu.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\report.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\report.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\rulerdc.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\rulerdc.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\shader.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\shader.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\shaderobj.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\shaderobj.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\shape.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\shape.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\stream.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\stream.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\typediag.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\typediag.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\undo.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\undo.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\util.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\util.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\xml.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\xml.h"
+				>
+			</File>
+		</Filter>
 	</Files>
 	<Globals>
 		<Global
