tidy output folder name

--- a/FragmentShader.vcproj
+++ b/FragmentShader.vcproj
@@ -18,8 +18,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
-			IntermediateDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
+			OutputDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			CharacterSet="0"
@@ -98,8 +98,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
-			IntermediateDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
+			OutputDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			CharacterSet="0"
@@ -176,8 +176,8 @@
 		</Configuration>
 		<Configuration
 			Name="Debug Unicode|Win32"
-			OutputDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
-			IntermediateDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
+			OutputDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			CharacterSet="1"
@@ -256,8 +256,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release Unicode|Win32"
-			OutputDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
-			IntermediateDirectory="$(SolutionDir)Build\$(ConfigurationName)\$(ProjectName)"
+			OutputDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
+			IntermediateDirectory="$(SolutionDir)build\$(ConfigurationName)\$(ProjectName)"
 			ConfigurationType="1"
 			UseOfMFC="0"
 			CharacterSet="1"
